<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuSearchPdf"
        android:icon="@drawable/ic_search_menu"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuPdfSortList"
        android:icon="@drawable/ic_menu_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menuSortByPdfName"
                    android:title="@string/by_name" />
                <item
                    android:id="@+id/menuSortByPdfModifiedDate"
                    android:title="@string/by_date_modified" />
                <item
                    android:id="@+id/menuSortByPdfSize"
                    android:title="@string/by_size" />
            </group>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menuSortPdfByAscending"
                    android:title="@string/ascending" />
                <item
                    android:id="@+id/menuSortPdfByDescending"
                    android:title="@string/descending" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menulistOrGrid"
        android:icon="@drawable/ic_action_list_view"
        android:title="@string/list_view"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuGridNumberSize"
        android:icon="@drawable/ic_action_grid_view"
        android:title="@string/grid_view"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuTwoColumns"
                android:title="@string/_2_columns" />
            <item
                android:id="@+id/menuThreeColumns"
                android:title="@string/_3_columns" />
            <item
                android:id="@+id/menuFourColumns"
                android:title="@string/_4_columns" />
            <item
                android:id="@+id/menuFiveColumns"
                android:title="@string/_5_columns" />
            <item
                android:id="@+id/menuSixColumns"
                android:title="@string/_6_columns" />
        </menu>
    </item>
    <item
        android:id="@+id/menuClearRecentPdfs"
        android:icon="@drawable/ic_clear_all_menu"
        android:title="@string/clear_recent"
        app:showAsAction="ifRoom" />
</menu>